# ab_testing

./: README.md  pyproject.toml
ab_testing/: ab_test.py  stratification.py  variance_reduction.py
ab_testing/sequential/: README.md  bonferroni.py  bonferronittest.py  wald_sprt.py
ab_testing/stratification/: stratification.py
ab_testing/synthetic_data/: simulate_ab_variants.py
notebooks/: stratification_weights.ipynb  stratified_ab_test.ipynb  stratified_conversion.ipynb
notebooks/conversion_funnel/: power_and_conversion_funnel.ipynb
notebooks/relaxing_stopping_rules/: decision_rules.py  simulate.py  simulate_decisions.py  stopping_rules.ipynb  tete.py
notebooks/sequential/: meta_analysis.ipynb  sandbox.ipynb
notebooks/stratification/: stratification_weights.ipynb  stratified_conversion.ipynb
tests/: test_stratification.py  test_variance_reduction.py
