[tool.poetry]
name = "ab_testing"
version = "0.1.0"
description = ""
authors = ["Wolfgang <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
statsmodels = "^0.13.5"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
jupyterlab = "^3.5.1"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
